[package]
name = "linera-shared-storage"
version = "0.6.0"
description = "RPC shared key value store."
authors = ["Linera <contact@linera.io>"]
readme = "README.md"
repository = "https://github.com/linera-io/linera-protocol"
homepage = "https://linera.dev"
documentation = "https://docs.rs/linera-shared-storage/latest/linera_shared_storage/"
license = "Apache-2.0"
edition = "2021"

#[features]

[features]
default = ["rocksdb"]
rocksdb = ["linera-views/rocksdb", "linera-service/rocksdb"]
aws = ["linera-views/aws", "linera-service/aws"]
scylladb = ["linera-views/scylladb", "linera-service/scylladb"]

[[bin]]
name = "shared_store_server"
path = "src/shared_store_server.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
linera-views = { workspace = true }
linera-service = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec", "net"] }
tonic = { workspace = true }
tonic-health = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde-reflection = { workspace = true }
serde_yaml = { workspace = true }
similar-asserts = { workspace = true }
test-strategy = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["proptest", "prost"]
