[package]
name = "linera-shared-storage"
version = "0.6.0"
description = "RPC shared key value store."
authors = ["Linera <contact@linera.io>"]
readme = "README.md"
repository = "https://github.com/linera-io/linera-protocol"
homepage = "https://linera.dev"
documentation = "https://docs.rs/linera-shared-storage/latest/linera_shared_storage/"
license = "Apache-2.0"
edition = "2021"

[features]
default = ["rocksdb"]
rocksdb = ["linera-views/rocksdb", "linera-service/rocksdb"]
aws = ["linera-views/aws", "linera-service/aws"]
scylladb = ["linera-views/scylladb", "linera-service/scylladb"]
test = ["linera-views/test", "linera-service/test"]

[[bin]]
name = "shared_store_server"
path = "src/shared_store_server.rs"

[dependencies]
async-lock = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
linera-views = { workspace = true }
linera-service = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde-reflection = { workspace = true }
serde_yaml = { workspace = true }
similar-asserts = { workspace = true }
test-strategy = { workspace = true }
linera-shared-storage = { path = ".", features = ["test"] }

[build-dependencies]
tonic-build = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["proptest", "prost"]
